Added pages and links to the pages

--- a/index.html
+++ b/index.html
@@ -17,9 +17,30 @@
     <main>
         <nav>
             <ul>
-                <li>Lasagna</li>
-                <li>Pancakes</li>
-                <li>Greek Salad</li>
+                <li>
+                    <h2>
+                        Lasagna
+                    </h2>
+                    <a href="./pages/lasagna.html" target="_blank" rel="noopener noreferrer">
+                        View Recipe
+                    </a>
+                </li>
+                <li>
+                    <h2>
+                        Pancakes
+                    </h2>
+                    <a href="./pages/pancakes.html" target="_blank" rel="noopener noreferrer">
+                        View Recipe
+                    </a>
+                </li>
+                <li>
+                    <h2>
+                        Greek Salad
+                    </h2>
+                    <a href="./pages/greek-salad.html" target="_blank" rel="noopener noreferrer">
+                        View Recipe
+                    </a>
+                </li>
             </ul>
         </nav>
     </main>
