--- a/index.html
+++ b/index.html
@@ -4,40 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 <body>
-    <header>
-        <h1>
+    <header class="py-3">
+        <h1 class="display-1 text-center">
             Odin Recipes
         </h1>
-        <p>
+        <p class="lead text-center">
             A collection of delicious recipes to try at home.
         </p>
     </header>
-    <main>
+    <main class="container">
         <nav>
-            <ul>
-                <li>
-                    <h2>
+            <ul class="justify-content-center align-items-center border-0">
+                <li class="card ">
+                    <h2 class="text-center display-2 card-text">
                         Lasagna
                     </h2>
-                    <a href="./pages/lasagna.html" target="_blank" rel="noopener noreferrer">
+                    <a class="btn btn-warning" href="./pages/lasagna.html" target="_blank" rel="noopener noreferrer">
                         View Recipe
                     </a>
                 </li>
-                <li>
-                    <h2>
+                <li class="card my-3">
+                    <h2 class="text-center display-2 card-text">
                         Pancakes
                     </h2>
-                    <a href="./pages/pancakes.html" target="_blank" rel="noopener noreferrer">
+                    <a class="btn btn-warning" href="./pages/pancakes.html" target="_blank" rel="noopener noreferrer">
                         View Recipe
                     </a>
                 </li>
-                <li>
-                    <h2>
+                <li class="card">
+                    <h2 class="text-center display-2 card-text">
                         Greek Salad
                     </h2>
-                    <a href="./pages/greek-salad.html" target="_blank" rel="noopener noreferrer">
+                    <a class="btn btn-warning" href="./pages/greek-salad.html" target="_blank" rel="noopener noreferrer">
                         View Recipe
                     </a>
                 </li>
