--- a/pages/lasagna.html
+++ b/pages/lasagna.html
@@ -4,34 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>
-                <a href="../index.html">
+    <nav class="mb-3 ">
+        <ul class="nav nav-fill justify-content-center text-bg-secondary py-3 nav-underline">
+            <li class="nav-item">
+                <a class="nav-link link-warning" href="../index.html">
                     Home
                 </a>
             </li>
-            <li>
-                <a href="lasagna.html" rel="noopener noreferrer">
+            <li class="nav-item">
+                <a class="nav-link link-warning active" href="lasagna.html" rel="noopener noreferrer">
                     Lasagna
                 </a>
             </li>
-            <li>
-                <a href="pancakes.html" rel="noopener noreferrer">
+            <li class="nav-item">
+                <a class="nav-link link-warning" href="pancakes.html" rel="noopener noreferrer">
                     Pancakes
                 </a>
             </li>
-            <li>
-                <a href="greek-salad.html" rel="noopener noreferrer">
+            <li class="nav-item">
+                <a class="nav-link link-warning" href="greek-salad.html" rel="noopener noreferrer">
                     Greek Salad
                 </a>
         </ul>
     </nav>
     <main>
             <section>
-                <img src="#" alt="Lasagna">
+                <img src="https://images.pexels.com/photos/4079522/pexels-photo-4079522.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Lasagna">
             </section>
             <section>
                 <header>
