--- a/pages/greek-salad.html
+++ b/pages/greek-salad.html
@@ -1,76 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Greek Salad</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
 
-</head>
-
-<body>
-    <nav class="mb-3 ">
-        <ul class="nav nav-fill justify-content-center text-bg-secondary py-3 nav-underline">
-            <li class="nav-item">
-                <a class="nav-link link-warning" href="../index.html">
-                    Home
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link link-warning" href="lasagna.html" rel="noopener noreferrer">
-                    Lasagna
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link link-warning" href="pancakes.html" rel="noopener noreferrer">
-                    Pancakes
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link link-warning active" href="greek-salad.html" rel="noopener noreferrer">
-                    Greek Salad
-                </a>
-        </ul>
+  <body>
+    <nav class="mb-3">
+      <ul
+        class="nav nav-fill justify-content-center text-bg-secondary py-3 nav-underline"
+      >
+        <li class="nav-item">
+          <a class="nav-link link-warning" href="../index.html"> Home </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link link-warning"
+            href="lasagna.html"
+            rel="noopener noreferrer"
+          >
+            Lasagna
+          </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link link-warning"
+            href="pancakes.html"
+            rel="noopener noreferrer"
+          >
+            Pancakes
+          </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link link-warning active"
+            href="greek-salad.html"
+            rel="noopener noreferrer"
+          >
+            Greek Salad
+          </a>
+        </li>
+      </ul>
     </nav>
-    <main>
-        <section>
-            <img src="https://images.pexels.com/photos/14016727/pexels-photo-14016727.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Greek Salad">
-        </section>
-        <section>
-            <header>
-                <h1>Greek Salad</h1>
-                <p>A refreshing Mediterranean salad with crisp vegetables, feta cheese, and olives, drizzled with olive
-                    oil.</p>
-            </header>
-            <article>
-                <section>
-                    <h2>Ingredients:</h2>
-                    <ul>
-                        <li>Cucumber</li>
-                        <li>Tomato</li>
-                        <li>Red onion</li>
-                        <li>Kalamata olives</li>
-                        <li>Feta cheese</li>
-                        <li>Olive oil</li>
-                        <li>Lemon juice</li>
-                        <li>Oregano</li>
-                    </ul>
-                </section>
-                <section>
-                    <h2>Steps:</h2>
-                    <ol>
-                        <li>Chop cucumbers, tomatoes, and onions.</li>
-                        <li>Add olives and feta cheese.</li>
-                        <li>Drizzle with olive oil and lemon juice.</li>
-                        <li>Sprinkle oregano and toss gently.</li>
-                        <li>Serve fresh.</li>
-                    </ol>
-                </section>
-            </article>
-        </section>
-    </main>
-</body>
+    <main class="container row">
+      <section class="col-md-8">
+        <img
+          src="https://images.pexels.com/photos/14016727/pexels-photo-14016727.jpeg?auto=compress&cs=tinysrgb&w=600"
+          alt="Greek Salad"
+        />
+      </section>
+      <section class="col-6 col-md-4 my-5">
+        <header>
+          <h2 class="text-warning display-2">Greek Salad</h2>
+          <p class="lead">
+            A refreshing Mediterranean salad with crisp vegetables, feta cheese,
+            and olives, drizzled with olive oil.
+          </p>
+        </header>
 
+        <section>
+          <h3 class="text-warning display-3">Ingredients:</h3>
+          <ul class="list-group list-group-flush lead my-2">
+            <li class="list-group-item border-warning">Cucumber</li>
+            <li class="list-group-item border-warning">Tomato</li>
+            <li class="list-group-item border-warning">Red onion</li>
+            <li class="list-group-item border-warning">Kalamata olives</li>
+            <li class="list-group-item border-warning">Feta cheese</li>
+            <li class="list-group-item border-warning">Olive oil</li>
+            <li class="list-group-item border-warning">Lemon juice</li>
+            <li class="list-group-item border-warning">Oregano</li>
+          </ul>
+
+          <h3 class="text-warning display-3">Steps:</h3>
+          <ol class="lead list-group list-group-flush list-group-numbered my-2">
+            <li class="list-group-item border-warning">
+              Chop cucumbers, tomatoes, and onions.
+            </li>
+            <li class="list-group-item border-warning">
+              Add olives and feta cheese.
+            </li>
+            <li class="list-group-item border-warning">
+              Drizzle with olive oil and lemon juice.
+            </li>
+            <li class="list-group-item border-warning">
+              Sprinkle oregano and toss gently.
+            </li>
+            <li class="list-group-item border-warning">Serve fresh.</li>
+          </ol>
+        </section>
+      </section>
+    </main>
+  </body>
 </html>
