--- a/pages/lasagna.html
+++ b/pages/lasagna.html
@@ -1,110 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lasagna</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-</head>
-<body>
-    <nav class="mb-3 ">
-        <ul class="nav nav-fill justify-content-center text-bg-secondary py-3 nav-underline">
-            <li class="nav-item">
-                <a class="nav-link link-warning" href="../index.html">
-                    Home
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link link-warning active" href="lasagna.html" rel="noopener noreferrer">
-                    Lasagna
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link link-warning" href="pancakes.html" rel="noopener noreferrer">
-                    Pancakes
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link link-warning" href="greek-salad.html" rel="noopener noreferrer">
-                    Greek Salad
-                </a>
-        </ul>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <nav class="mb-3">
+      <ul
+        class="nav nav-fill justify-content-center text-bg-secondary py-3 nav-underline"
+      >
+        <li class="nav-item">
+          <a class="nav-link link-warning" href="../index.html"> Home </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link link-warning active"
+            href="lasagna.html"
+            rel="noopener noreferrer"
+          >
+            Lasagna
+          </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link link-warning"
+            href="pancakes.html"
+            rel="noopener noreferrer"
+          >
+            Pancakes
+          </a>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link link-warning"
+            href="greek-salad.html"
+            rel="noopener noreferrer"
+          >
+            Greek Salad
+          </a>
+        </li>
+      </ul>
     </nav>
-    <main>
-            <section>
-                <img src="https://images.pexels.com/photos/4079522/pexels-photo-4079522.jpeg?auto=compress&cs=tinysrgb&w=600" alt="Lasagna">
-            </section>
-            <section>
-                <header>
-                    <h1>
-                        Lasagna
-                    </h1>
-                    <p>
-                        A classic Italian dish with layers of pasta, rich meat sauce, creamy béchamel, and melted cheese.
-                    </p>
-                </header>
-                <article>
-                    <section>
-                        <h2>
-                            Ingredients:
-                        </h2>
-                        <ul>
-                            <li>
-                                Lasagna noodles
-                            </li>
-                            <li>
-                                Ground Beef
-                            </li>
-                            <li>
-                                Tomato Sauce
-                            </li>
-                            <li>
-                                Ricotto Cheese
-                            </li>
-                            <li>
-                                Mozzarella Cheese
-                            </li>
-                            <li>
-                                Parmesan Cheese
-                            </li>
-                            <li>
-                                Garlic
-                            </li>
-                            <li>
-                                Onion
-                            </li>
-                            <li>
-                                Italian seasoning
-                            </li>
-                        </ul>
-                    </section>
+    <main class="container row">
+      <section class="col-md-8">
+        <img
+          src="https://images.pexels.com/photos/4079522/pexels-photo-4079522.jpeg?auto=compress&cs=tinysrgb&w=600"
+          alt="Lasagna"
+        />
+      </section>
+      <section class="col-6 col-md-4 my-5">
+        <header>
+          <h2 class="text-warning display-2">Lasagna</h2>
+          <p class="lead">
+            A classic Italian dish with layers of pasta, rich meat sauce, creamy
+            béchamel, and melted cheese.
+          </p>
+        </header>
 
-                    <section>
-                        <h2>
-                            Steps:
-                        </h2>
-                        <ol>
-                            <li>
-                                Cook lasagna noodles and prepare the meat sauce.
-                            </li>
-                            <li>
-                                Layer pasta, sauce, and cheeses in a baking dish.
-                            </li>
-                            <li>
-                                Repeat layers and top with mozzarella.
-                            </li>
-                            <li>
-                                Bake until golden brown and bubbly.
-                            </li>
-                            <li>
-                                Let it rest before serving.
-                            </li>
-                        </ol>
-                    </section>
-                </article>
-            </section>
+        <section>
+          <h3 class="text-warning display-3">Ingredients:</h3>
+          <ul class="list-group list-group-flush lead my-2">
+            <li class="list-group-item border-warning">Lasagna noodles</li>
+            <li class="list-group-item border-warning">Ground Beef</li>
+            <li class="list-group-item border-warning">Tomato Sauce</li>
+            <li class="list-group-item border-warning">Ricotto Cheese</li>
+            <li class="list-group-item border-warning">Mozzarella Cheese</li>
+            <li class="list-group-item border-warning">Parmesan Cheese</li>
+            <li class="list-group-item border-warning">Garlic</li>
+            <li class="list-group-item border-warning">Onion</li>
+            <li class="list-group-item border-warning">Italian seasoning</li>
+          </ul>
+
+          <h3 class="text-warning display-3">Steps:</h3>
+          <ol class="lead list-group list-group-flush list-group-numbered my-2">
+            <li class="list-group-item border-warning">
+              Cook lasagna noodles and prepare the meat sauce.
+            </li>
+            <li class="list-group-item border-warning">
+              Layer pasta, sauce, and cheeses in a baking dish.
+            </li>
+            <li class="list-group-item border-warning">
+              Repeat layers and top with mozzarella.
+            </li>
+            <li class="list-group-item border-warning">
+              Bake until golden brown and bubbly.
+            </li>
+            <li class="list-group-item border-warning">
+              Let it rest before serving.
+            </li>
+          </ol>
+        </section>
+      </section>
     </main>
-</body>
+  </body>
 </html>
